--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,16 @@
 body {
   background-color: darkgray;
 }
+
+.walmart-output {
+  color: black;
+}
+
+#outputrow{
+  width: 510px;
+}
+
+.walmartimg{
+  height: 300px;
+  width: 300px;
+}
