--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,6 +21,12 @@ body {
 
 .popover {
   max-width: 450px;
+  box-shadow: 3px 3px 3px gray;
+  transition: 0.1s;
+}
+
+.popover:hover {
+  box-shadow: 8px 8px 8px gray;
 }
 
 #outputrow {
